# izylrnTracker

./: .gitattributes  .gitignore
izysafe/backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
izysafe/backend/alembic/: env.py
izysafe/backend/alembic/versions/: 0001_initial_schema.py  0002_geofence_active_days.py  0003_watch_removed_enabled.py  0004_attendance_links.py  0005_bus_device_and_alert.py  0006_bus_device_owner.py  0007_driver_login.py  0008_bus_trips.py  0009_audit_log.py  0010_school_profile.py  0011_child_location_consent.py  0012_i18n_and_menus.py  0013_parent_app_i18n_seed.py  0014_i18n_pages_and_alerts_seed.py  0015_settings_i18n_seed.py  0016_safe_zones_i18n_seed.py  0017_devices_i18n_seed.py  0018_share_links_i18n_seed.py  0019_polish_i18n_seed.py  0020_chat_i18n_seed.py
izysafe/backend/app/: __init__.py  main.py
izysafe/backend/app/api/: deps.py  public_track.py
izysafe/backend/app/core/: __init__.py  config.py  database.py  errors.py  firebase.py  geometry.py  plans.py  redis.py  redis_keys.py  security.py  validators.py
izysafe/backend/app/models/: __init__.py  alert.py  audit.py  base.py  child.py  comms.py  device.py  integration.py  location.py  route.py  school.py  sos.py  teen.py  user.py
izysafe/backend/app/schemas/: alert.py  audio.py  auth.py  bus.py  chat.py  child.py  device.py  emergency.py  family.py  geofence.py  i18n.py  location.py  route.py  school.py  share.py  sos.py  subscription.py
izysafe/backend/app/services/: alert_service.py  attendance_service.py  audio_service.py  audit_service.py  batch_writer.py  battery_service.py  bus_service.py  bus_tracking_service.py  chat_service.py  children_service.py  dashboard_service.py  (+35 more)
izysafe/backend/db/: schema.sql
izysafe/backend/tests/: conftest.py  fakes.py  test_alerts.py  test_attendance.py  test_audit.py  test_auth_send_otp.py  test_auth_tokens.py  test_auth_verify_otp.py  test_batch_writer.py  test_battery.py  test_bus.py  test_bus_tracking.py  test_chat.py  test_children.py  test_device_status.py  test_devices.py  test_driver_app.py  test_driver_trips.py  test_emergency.py  test_enrollment.py  test_family_invite.py  test_family_manage.py  test_fcm_gateway.py  test_geofence_breach.py  test_geofences.py  test_geometry.py  test_i18n.py  test_jobs.py  test_meta.py  test_pickup.py  test_public_track.py  test_razorpay.py  test_realtime_gateway.py  test_route_deviation.py  test_routes.py  test_safe_addresses.py  test_school_admin_manage.py  test_school_admin_self.py  test_school_auth.py  test_school_password_reset.py  (+12 more)
(+179 files in other folders)
