[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "izysafe-backend"
version = "0.1.0"
description = "IzySafe — GPS child-safety platform backend (FastAPI)"
requires-python = ">=3.12"

# Minimal-but-complete dependency set for Sprint 0.
# Auth/OTP/payments/firebase libs are added in the sprint that first needs them.
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",            # async driver (app runtime)
    "psycopg2-binary>=2.9",     # sync driver (Alembic migrations)
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "httpx>=0.27",             # OTP gateway calls (MSG91/Twilio), Traccar client
    "pyjwt>=2.8",              # JWT HS256
    "bcrypt>=4.1",             # OTP + password hashing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",         # in-memory Redis for tests
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
